src/test/deca/syntax/valid/expr_and_chain.deca
{
    if(true && true && false && true){
        println("ok");
    }
}
