src/test/deca/syntax/invalid/extra_token.deca

//Erreur : token après la fin

{
    println ("ok");
}
}